Mobile nav collapse on click, resize nav, repair smoothscroll, update graphs

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 body {
-	padding-top: 72px;
+	padding-top: 56px;
 }
 
 nav {
@@ -73,8 +73,24 @@ footer {
 }
 
 @media screen and (max-width: 767px) {
-	body {
-		padding-top: 56px;
+	nav form {
+		margin-left: auto;
+		margin-right: 15px;
+	}
+	nav form i {
+		font-size: 0.6rem;
+	}
+	nav .navbar-toggler {
+		font-size: 1rem;
+	}
+	nav .navbar-collapse {
+		order: 10;
+	}
+	nav select#language-selector {
+		width: 65px;
+		font-size: 0.7rem;
+		padding-left: .5rem;
+		padding-right: 1.5rem;
 	}
 
 	div#advice-list .list-group-item:last-child {
